--- a/pack/main/xref-main.html
+++ b/pack/main/xref-main.html
@@ -688,6 +688,7 @@ imported by:
  &#8226;   <a href="#PIL.features">PIL.features</a>
  &#8226;   <a href="#mouseinfo">mouseinfo</a>
  &#8226;   <a href="#pyscreeze">pyscreeze</a>
+ &#8226;   <a href="#utils.func">utils.func</a>
 
   </div>
 
@@ -1544,6 +1545,7 @@ imported by:
     <a href="#PIL">PIL</a>
  &#8226;   <a href="#mouseinfo">mouseinfo</a>
  &#8226;   <a href="#pyscreeze">pyscreeze</a>
+ &#8226;   <a href="#utils.func">utils.func</a>
 
   </div>
 
@@ -2951,9 +2953,7 @@ imported by:
  &#8226;   <a href="#widgets.navigation_bar">widgets.navigation_bar</a>
  &#8226;   <a href="#widgets.widget.card">widgets.widget.card</a>
  &#8226;   <a href="#widgets.widget.info_widget">widgets.widget.info_widget</a>
- &#8226;   <a href="#widgets.widget.setting_widget">widgets.widget.setting_widget</a>
  &#8226;   <a href="#widgets.widget.ui.stamina_widget">widgets.widget.ui.stamina_widget</a>
- &#8226;   <a href="#widgets.widget.ui.world_widget">widgets.widget.ui.world_widget</a>
  &#8226;   <a href="#widgets.widget.world_widget">widgets.widget.world_widget</a>
 
   </div>
@@ -10218,7 +10218,6 @@ imports:
  &#8226;   <a href="#gui">gui</a>
  &#8226;   <a href="#qframelesswindow">qframelesswindow</a>
  &#8226;   <a href="#script.use_of_stamina">script.use_of_stamina</a>
- &#8226;   <a href="#sys">sys</a>
  &#8226;   <a href="#threadpool">threadpool</a>
  &#8226;   <a href="#widgets.navigation_bar">widgets.navigation_bar</a>
 
@@ -23085,6 +23084,7 @@ imports:
  &#8226;   <a href="#utils.check">utils.check</a>
  &#8226;   <a href="#utils.func">utils.func</a>
  &#8226;   <a href="#utils.path">utils.path</a>
+ &#8226;   <a href="#utils.tool">utils.tool</a>
  &#8226;   <a href="#widgets">widgets</a>
 
   </div>
@@ -23751,7 +23751,6 @@ imported by:
  &#8226;   <a href="#getpass">getpass</a>
  &#8226;   <a href="#gettext">gettext</a>
  &#8226;   <a href="#glob">glob</a>
- &#8226;   <a href="#gui.main_window">gui.main_window</a>
  &#8226;   <a href="#gzip">gzip</a>
  &#8226;   <a href="#http.client">http.client</a>
  &#8226;   <a href="#http.server">http.server</a>
@@ -24606,6 +24605,7 @@ imported by:
  &#8226;   <a href="#typing_extensions">typing_extensions</a>
  &#8226;   <a href="#widgets.base.log">widgets.base.log</a>
  &#8226;   <a href="#widgets.widget.card">widgets.widget.card</a>
+ &#8226;   <a href="#widgets.widget.setting_widget">widgets.widget.setting_widget</a>
 
   </div>
 
@@ -25147,10 +25147,13 @@ imported by:
   <a target="code" href="///F:/AutoStarRail/utils/func.py" type="text/plain"><tt>utils.func</tt></a>
 <span class="moduletype">SourceModule</span>  <div class="import">
 imports:
-    <a href="#pyautogui">pyautogui</a>
+    <a href="#PIL">PIL</a>
+ &#8226;   <a href="#PIL.ImageGrab">PIL.ImageGrab</a>
+ &#8226;   <a href="#pyautogui">pyautogui</a>
  &#8226;   <a href="#time">time</a>
  &#8226;   <a href="#utils">utils</a>
  &#8226;   <a href="#utils.path">utils.path</a>
+ &#8226;   <a href="#utils.tool">utils.tool</a>
  &#8226;   <a href="#widgets">widgets</a>
 
   </div>
@@ -25202,6 +25205,8 @@ imports:
   <div class="import">
 imported by:
     <a href="#script.start_game">script.start_game</a>
+ &#8226;   <a href="#script.use_of_stamina">script.use_of_stamina</a>
+ &#8226;   <a href="#utils.func">utils.func</a>
  &#8226;   <a href="#utils.path">utils.path</a>
  &#8226;   <a href="#widgets.widget.setting_widget">widgets.widget.setting_widget</a>
 
@@ -25468,7 +25473,6 @@ imported by:
  &#8226;   <a href="#widgets.widget.setting_widget">widgets.widget.setting_widget</a>
  &#8226;   <a href="#widgets.widget.stamina_widget">widgets.widget.stamina_widget</a>
  &#8226;   <a href="#widgets.widget.ui.info_widget">widgets.widget.ui.info_widget</a>
- &#8226;   <a href="#widgets.widget.ui.setting_widget">widgets.widget.ui.setting_widget</a>
  &#8226;   <a href="#widgets.widget.universe_widget">widgets.widget.universe_widget</a>
  &#8226;   <a href="#widgets.widget.world_widget">widgets.widget.world_widget</a>
 
@@ -25602,6 +25606,7 @@ imports:
   <div class="import">
 imported by:
     <a href="#widgets.widget">widgets.widget</a>
+ &#8226;   <a href="#widgets.widget.ui.setting_widget">widgets.widget.ui.setting_widget</a>
  &#8226;   <a href="#widgets.widget.ui.stamina_widget">widgets.widget.ui.stamina_widget</a>
  &#8226;   <a href="#widgets.widget.ui.world_widget">widgets.widget.ui.world_widget</a>
 
@@ -25635,9 +25640,9 @@ imported by:
   <a target="code" href="///F:/AutoStarRail/widgets/widget/setting_widget.py" type="text/plain"><tt>widgets.widget.setting_widget</tt></a>
 <span class="moduletype">SourceModule</span>  <div class="import">
 imports:
-    <a href="#PySide6.QtGui">PySide6.QtGui</a>
- &#8226;   <a href="#PySide6.QtWidgets">PySide6.QtWidgets</a>
+    <a href="#PySide6.QtWidgets">PySide6.QtWidgets</a>
  &#8226;   <a href="#qfluentwidgets">qfluentwidgets</a>
+ &#8226;   <a href="#typing">typing</a>
  &#8226;   <a href="#utils.tool">utils.tool</a>
  &#8226;   <a href="#widgets">widgets</a>
  &#8226;   <a href="#widgets.widget">widgets.widget</a>
@@ -25755,7 +25760,7 @@ imports:
     <a href="#PySide6.QtCore">PySide6.QtCore</a>
  &#8226;   <a href="#PySide6.QtWidgets">PySide6.QtWidgets</a>
  &#8226;   <a href="#qfluentwidgets">qfluentwidgets</a>
- &#8226;   <a href="#widgets">widgets</a>
+ &#8226;   <a href="#widgets.widget.card">widgets.widget.card</a>
  &#8226;   <a href="#widgets.widget.ui">widgets.widget.ui</a>
 
   </div>
@@ -25796,7 +25801,6 @@ imported by:
 <span class="moduletype">SourceModule</span>  <div class="import">
 imports:
     <a href="#PySide6.QtCore">PySide6.QtCore</a>
- &#8226;   <a href="#PySide6.QtGui">PySide6.QtGui</a>
  &#8226;   <a href="#PySide6.QtWidgets">PySide6.QtWidgets</a>
  &#8226;   <a href="#qfluentwidgets">qfluentwidgets</a>
  &#8226;   <a href="#widgets.widget.card">widgets.widget.card</a>
